<resources>
    <string name="app_name">Bober</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="login">"Login"</string>
    <string name="password">"Password"</string>
    <string name="fullname">"Full name"</string>
    <string name="email">"Email"</string>
    <string name="registration_text">Register your account</string>
    <string name="password_confirm">Confirm password</string>
    <string name="IP">192.168.230.193:8080</string>
    <string name="log_in_text">Log in to your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_deadlines">Deadlines</string>
    <string name="create_group">New group</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="group_creation_text">Create new group</string>
    <string name="action_settings">Settings\n</string>
    <string name="nav_header_photo">Navigation photo\n</string>
    <string name="nav_header_first_name">First name\n</string>
    <string name="nav_header_second_name">Second name\n</string>
    <string name="nav_header_full_name">Full name</string>
    <string name="nav_header_email_name">Email</string>
    <string name="menu_drawer_open">Drawer open</string>
    <string name="menu_drawer_close">Drawer close</string>
    <string name="admin">"Admin"</string>
    <string name="group_title">"Group title"</string>
    <string name="chapters">Chapters</string>
    <string name="number">Number</string>
    <string name="chapter_title">Chapter title</string>
    <string name="new_chapter">New chapter</string>
    <string name="title_activity_chapter_upload">ChapterUploadActivity</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="enter_group">Enter group</string>
    <string name="enter">Enter</string>
    <string name="log_out">Log out</string>
    <string name="enter_group_message">Enter password</string>
    <string name="test_number_of">Test number ? of ?</string>
    <string name="question">Question ?</string>
    <string name="question_text">Question text</string>
    <string name="answer">Answer ?</string>
    <string-array name="number_of_answers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="default_login">login</string>
    <string name="default_meta_info">meta info</string>
    <string name="default_email">email</string>
    <string name="statisticButton">Statistic</string>
    <string name="invites_button">Invites</string>
    <string name="log_out_button_text">Log out</string>
    <string name="acceptButtonDiscription">accept</string>
    <string name="cancel_button_description">decline</string>
    <string name="num">Num</string>
    <string name="chapter_tests_num">Num</string>
    <string name="text_for_test">Text for Test ?</string>
    <string name="create_test">Create test</string>
    <string name="test_name">Test name</string>
    <string name="test_created">Test created</string>
    <string name="go_back">Go back</string>
    <string name="chapter_name">Chapter name</string>
    <string name="start_test">start test</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="answer_but">answer</string>
    <string name="_1">1</string>
    <string name="title_activity_group_members">GroupMembersActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="chapters1">Chapters</string>
    <string name="members">Members</string>
    <string name="person_name">Full name</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="test_name1">Test name</string>
    <string name="_10_12">10/12</string>
    <string name="group_chapter">group/chapter</string>
    <string name="tests">Tests</string>
    <string name="settings">Settings</string>
    <string name="test_creation">Tests creation</string>
    <string name="setdeadline">Set deadline for completion tests</string>
    <string name="sample_date">01–01–2000 23:59</string>
    <string name="deadline">Deadline: 01–01–2000 23:59</string>
    <string name="_10_0">10.0</string>
    <string name="tests_solved_10">tests solved: 10</string>
    <string name="group">Group</string>
    <string name="chapter">Chapter</string>
    <string name="_00_00">00:00</string>
    <string name="check_text_and_set_name_for_test">Check text and set name for test</string>
    <string name="create_questions">Create questions</string>
    <string name="questions_created">Questions created</string>
    <string name="create_time_limit_for_the_test">Create time limit for the test</string>
    <string name="set_additional_settings_for_the_test">Set additional settings for the test</string>
    <string name="settings_are_set">Settings are set</string>
    <string name="invite">invite</string>
    <string name="enter_user_login">Enter user login</string>
    <string name="invite_user">Invite user</string>
    <string name="login_1">login</string>
</resources>
