<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="215dp"
    android:padding="20sp"
    android:background="@color/cyan"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:contentDescription="@string/nav_header_photo"
        android:layout_marginTop="17sp"
        android:paddingTop="8sp"
        android:layout_marginStart="-7sp"
        android:paddingStart="0sp"
        android:paddingEnd="8sp"
        android:src="@drawable/empty_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2sp"
        android:textSize="21sp"
        android:text="@string/nav_header_full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:textSize="21sp"
        android:text="@string/nav_header_email_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>