<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView android:id="@+id/profile_image"
               android:layout_width="wrap_content"
               android:layout_height="300sp"
               android:src="@drawable/empty_profile"
               app:layout_constraintBottom_toTopOf="@id/profile_image"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintHorizontal_bias="1.0"
               app:layout_constraintVertical_bias="0"/>

    <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/default_login"
            android:layout_marginStart="120sp"
            android:layout_marginEnd="120sp"

            app:layout_constraintBottom_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/default_email"
            android:layout_marginStart="60sp"
            android:layout_marginEnd="60sp"
            android:layout_marginTop="10sp"

            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/meta_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/default_meta_info"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.03"/>

    <Button
            android:id="@+id/statistic_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statisticButton"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meta_info"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0"
    />

    <Button
            android:id="@+id/groups_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_groups"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statistic_button"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0"
    />


    <Button
            android:id="@+id/invite_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invites_button"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groups_button"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0"
    />

    <Button
            android:id="@+id/log_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out_button_text"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invite_button"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0"
    />





</androidx.constraintlayout.widget.ConstraintLayout>