<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/set_additional_settings_for_the_test"
            android:textColor="@color/dark_gray" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/set_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_time_limit_for_the_test"
        android:textSize="16sp"
        android:textColor="@color/dark_gray_chapter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar_layout"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/time_limit_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_00_00"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_tl"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/shaped_border"
        />

    <Button
        android:id="@+id/test_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_are_set"
        android:backgroundTint="@color/lavanda"
        android:textSize="17sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.98"
        />

</androidx.constraintlayout.widget.ConstraintLayout>